# evmodin-test

./: .gitignore  Basic.sol  CalleeTest.sol  CallerTest.sol  Cargo.toml  GreetTest.sol
src/: lib.rs  main.rs  odin_vm.rs
